# sometimes-youwin-bot

./: .gitignore  Cargo.toml  LICENSE  build.rs
crates/commands/: Cargo.toml
crates/commands/src/: cli.rs  commands.rs  lib.rs  utils.rs
crates/discord/: Cargo.toml
crates/discord/src/: antispam.rs  commands.rs  discord_bot.rs  lib.rs
crates/model/: Cargo.toml
crates/model/src/: config.rs  creds.rs  lib.rs  messages.rs
crates/scripting/: Cargo.toml
crates/scripting/src/: lib.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: lib.rs
crates/twitch/: Cargo.toml
crates/twitch/src/: lib.rs  twitch_bot.rs
src/: commands.rs  config.rs  debug.rs  discord.rs  lib.rs  main.rs  twitch.rs
src/discord/: antispam.rs  commands.rs
