[package]
name = "sometimes-youwin-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sometimes_youwin"

[[bin]]
name = "bot"
path = "src/bin/bot/main.rs"

[[bin]]
name = "authorize"
path = "src/bin/authorize/main.rs"

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
ctrlc = "3.2"
lazy_static = "1.4"

tokio = { version = "1.22", features = ["macros", "rt-multi-thread"] }

# Data
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

# Discord
serenity = "0.11"

# Twitch
reqwest = { version = "0.11", features = ["json"] }
twitchchat = { version = "0.14.8", features = ["async", "tokio", "tokio-util", "tokio-rustls", "webpki-roots"] }
twitch_api = { version = "0.7.0-rc.2", features = ["all", "reqwest"] }

# Commands
ferris-says = "0.2"
rand = "0.8"
