[package]
name = "sometimes-youwin-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/*"
]

[workspace.dependencies]
anyhow = "1.0.69"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
chrono = "0.4"

tokio = { version = "1.22", features = ["macros", "rt-multi-thread"] }

# Data
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }

discord = { path = "crates/discord" }
twitch = { path = "crates/twitch" }
model = { path = "crates/model" }

ctrlc = "3.2"
