[package]
name = "discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
commands = { path = "../commands" }

anyhow = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
toml = { workspace = true }

serenity = "0.11"
