[package]
name = "scripting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
anyhow = { workspace = true }

rhai = { version = "1.13", features = ["sync", "only_i64", "internals"] }
