[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["http2"] }

log = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

commands = { path = "../commands" }
model = { path = "../model" }
