[package]
name = "twitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commands = { path = "../commands" }
model = { path = "../model" }

anyhow = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }

reqwest = { version = "0.11", features = ["json"] }
twitchchat = { git = "https://github.com/museun/twitchchat", rev = "883230553d14bf997ad5814bb234ff6fb605ae2d", features = ["async", "tokio", "tokio-util", "tokio-rustls", "webpki-roots"] }
twitch_api = { version = "0.7.0-rc.4", features = ["all", "reqwest"] }
